--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
+    <meta charset="UTF-8">
+    <title>My ToDo</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <h1>Мой To-Do Лист</h1>
-    <div id="task-container"></div>
+    <div class="container">
+        <h1>TODO LIST</h1>
+
+        <div class="input-group">
+            <input type="text" id="taskInput" placeholder="Что нужно сделать?">
+            <button onclick="addTask()">Добавить</button>
+        </div>
+
+        <div id="taskList" class="task-list"></div>
+    </div>
 
     <script src="/static/js/script.js"></script>
 </body>
