--- a/static/login.html
+++ b/static/login.html
@@ -11,15 +11,17 @@
     <form id="loginForm">
         <div class="form-group">
             <label>Логин</label>
-            <input type="text" name="login" class="form-control" required>
+            <input type="text" id="loginInput" name="login" class="form-control" required>
         </div>
         <div class="form-group">
             <label>Пароль</label>
-            <input type="password" name="password" class="form-control" required>
+            <input type="password" id="passwordInput" name="password" class="form-control" required>
         </div>
-        <button type="submit" class="btn-submit">Войти</button>
+        <div id="error-message" class="error-alert"></div>
+        <button type="submit" id="btnLogin" class="btn-submit">Войти</button>
         <p class="auth-footer">Нет аккаунта? <a href="/register">Регистрация</a></p>
     </form>
     </div>
+    <script src="/static/js/login.js"></script>
 </body>
 </html>
