--- a/static/register.html
+++ b/static/register.html
@@ -11,19 +11,21 @@
     <form id="registerForm">
         <div class="form-group">
             <label>Логин</label>
-            <input type="text" name="login" class="form-control" required placeholder="Придумайте логин">
+            <input type="text" name="login" id="loginInput" class="form-control" required placeholder="Придумайте логин">
         </div>
         <div class="form-group">
             <label>Пароль</label>
-            <input type="password" name="password" class="form-control" required placeholder="минимум 6 символов">
+            <input type="password" name="password" id="passwordInput" class="form-control" required placeholder="минимум 6 символов">
         </div>
         <div class="form-group">
             <label>Повторите пароль</label>
-            <input type="password" name="repeat_password" class="form-control" required placeholder="Еще раз">
+            <input type="password" name="repeat_password" id="repeatPasswordInput" class="form-control" required placeholder="Еще раз">
         </div>
-        <button type="submit" class="btn-submit">Создать аккаунт</button>
+        <div id="error-message" class="error-alert"></div>
+        <button type="submit" id="btnRegistration" class="btn-submit">Создать аккаунт</button>
         <p class="auth-footer">Есть аккаунт? <a href="/login">Войти</a></p>
     </form>
     </div>
+    <script src="/static/js/registration.js"></script>
 </body>
 </html>
